# Creating-a-Docker-Compiler-Service

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.MD  README.MD
.images/: _resources.key
compiler-services/: alpine-latest-clang-14.0-build-service.dockerfile  build-project.sh  create-docker-service.sh  project-settings.sh
entry-points/: build.sh
include/slx/: cmd-line-parsing.hh  compiler-support.hh
scripts/: core.sh  install-bash-mac-os.sh  install-prerequisites-ubuntu-vm.sh  network.sh
source/hello-world-test/: CMakeLists.txt  main.cpp  version.h.in
